syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/Insid1/go-auth-user/services/user/user_v1;user_v1";

service UserV1 {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
}

message User {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  uint32 age = 5;
  google.protobuf.StringValue name = 6; // means it may not exist
  string pass_hash = 7;
}

message GetRequest {
  string id = 1;
  string email = 2;
}

message GetResponse {
  User user = 1;
}

message CreateRequest {
  User user = 1;
}

message CreateResponse {
  string id = 1;
}